--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ section#hero .hero-box::before {
   position: absolute;
   width: 100%;
   height: 30vw;
-  background-image: url("../hero-bg.png");
+  background-image: url("../src/hero-bg.png");
   background-size: cover;
   background-position: 0 90%;
   opacity: 0.5;
