--- a/sass/style.scss
+++ b/sass/style.scss
@@ -284,7 +284,7 @@ section {
         position: absolute;
         width: 100%;
         height: 30vw;
-        background-image: url("../hero-bg.png");
+        background-image: url("../src/hero-bg.png");
         background-size: cover;
         background-position: 0 90%;
         opacity: 0.5;
